--- a/configs/experiment_2.yaml
+++ b/configs/experiment_2.yaml
@@ -1,5 +1,5 @@
 project:
-  name: spotify-baseline
+  name: spotify-experiment-2
   seed: 42
 
 data:
@@ -29,4 +29,4 @@ model:
     n_jobs: -1
 
 mlflow:
-  experiment_name: spotify-baseline
+  experiment_name: spotify-experiment-2
