--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # core
 pandas==2.2.3
-numpy==2.1.1           # 支援 Python 3.13
+numpy==2.1.1
+plotly           # 支援 Python 3.13
 scikit-learn==1.5.2
 scipy==1.14.1          # 有 wheel
 
@@ -25,6 +26,7 @@ streamlit==1.40.1
 tqdm==4.66.5
 matplotlib==3.9.2
 seaborn==0.13.2
+plotly==5.24.1
 
 # quality
 black==24.10.0
